syntax = "proto3";

option csharp_namespace = "GrpcService.Calc.Client";

package calc;
import "Request.proto";
import "Response.proto";

service CalcOperation {
  rpc  Execute(CalcOperationRequest) returns (CalcOperationReply);
}
